CHANGES for LIRE
================

2012-12-12
==========
  - Added joint histogram class and added it to Searcher and Builder factories.
  - Fixed nasty bug in JSD implementation (operator priority in Java!)
  - Made JSD the default distance function in RGB color histogram.

2012-12-10
==========
  - Test for LSH done and reported working.
  - New method in FileUtils to write a PNG from the results.

2012-12-06
==========
  - Made SIFT BoVW work.

2012-11-30
==========
  - Smaller bug fixes for Lucene 4.0 adoption

2012-11-29
==========
  - Adoptions to src tree for Lucene 4.0 (BoVW).
  - Changes in VisualWordsTest to test indexing and search.
  - Changed SURF BoVW weighting scheme to BM-25 as default setting.
  - Found that SIFT doesn't work right now -> TODO!

2012-11-29
==========
  - Adoptions to test src tree for Lucene 4.0
  - Eliminating errors & optimizing routines
  - Added TestGeneral, confirmed global features, RerankFilter and LSAFilter working.
  - Added utility function for showing results in an image: FileUtils.saveImageResultsToPng(...)

2012-11-27
==========
  - Adoptions to src tree for Lucene 4.0

2012-11-14
==========
  - Adoptions to src tree for Lucene 4.0

2012-09-26
==========
  - Released Lire 0.9.2 & LireDemo 0.9.2

2012-09-25
==========
  - Fixed some bugs in LireDemo browse panel.

2012-08-07
==========
  - Changed parameters in LireDemo

2012-08-06
==========
  - Fixed performance Bug in GenericImageSearcher (new instance per document)
  - Added net.semanticmetadata.lire.utils.StatsUtils
  - Fixed nasty bug in KMeans implementation.

2012-07-23
==========
  - Typo in net.semanticmetadata.lire.indexing.MetricSpacesInvertedListIndexing

2012-07-23
==========
  - Updated libs in samples.
  - Updated build.xml
  - refactored name of surf visual words index field

2012-07-16
==========
  - Updated Lucene to version 3.6
  - Cleaned up directory structure and libraries

2012-02-28
==========
  - Liredemo: Fixed bug in ParallelIndexer.